--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,8 +19,15 @@
     <%= f.label :text %><br>
     <%= f.text_area :text %>
   </p>
- 
+
+  <p>
+     <%= f.check_box :is_favorite %>
+     <%= f.label "Is this a favorite?"%>
+  </p> 
+
   <p>
     <%= f.submit %>
   </p>
+
+
 <% end %>
