--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,5 +8,10 @@
   <%= @article.text %>
 </p>
 
+<p>
+  <strong>Is favorite:</strong>
+  <%= @article.is_favorite %>
+</p>
+
 <%= link_to 'Back', articles_path %>
 | <%= link_to 'Edit', edit_article_path(@article) %>
