--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @article do |f| %>
+<%= form_for @article, :html => { :multipart => true } do |f| %>
   <% if @article.errors.any? %>
   <div id="error_explanation">
     <h2><%= pluralize(@article.errors.count, "error") %> prohibited
@@ -22,12 +22,15 @@
 
   <p>
      <%= f.check_box :is_favorite %>
-     <%= f.label "Is this a favorite?"%>
-  </p> 
-
-  <p>
-    <%= f.submit %>
+     <%= f.label "Is this a favorite?"%>	
   </p>
 
+  <p>
+      <%= f.file_field :photo %>
+  </p>
+
+  <p>
+    <%= f.submit%>
+  </p>
 
 <% end %>
