--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,5 @@
+
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -13,3 +15,30 @@
  *= require_tree .
  *= require_self
  */
+
+#nav {
+	
+	width: 100%;
+	float: left;
+	margin: 0 1;
+	padding: 0;
+	list-style: none;
+	background color: none;
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+}
+
+#nav li{
+	
+	float: left;
+}
+
+#nav li a {
+	
+	display: block;
+	padding: 8px 15px;
+	text-decoration: none;
+	font-height: bold;
+	color: #069;
+	border-right: 1px solid #ccc;
+}
