--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -2,12 +2,30 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#article-body {
 
-	background: #ADD8E6;
+h1 {
+
 	text-align: center;
+	&.left {
+	text-align: left;
+	}
+}
+
+
+#article-body {
+	
+	padding: 5px;
+	margin:0 auto;
 
 }
+
+#article_image {
+
+	float:right; 
+	padding: 5px;
+}
+
+
 
 
 
