--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,5 @@
-<h1>Listing articles</h1>
- 
-<%= link_to 'New article', new_article_path %>
-
-|| 
-
-<%= link_to 'Favorite articles', favorites_path %>
-
+<h1>All articles</h1>
+<hr>
 <p>
 <table>
   <tr>
@@ -27,3 +21,5 @@
 </table>
 </p>
 
+<!--<%= link_to 'Favorite articles', favorites_path %>-->
+<!--<%= link_to 'New article', new_article_path %>-->
