added in links for nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 	
+<head>
 
+	<ul id= "nav">
+		<li><a href ="/">Home</a></li>
+		<li><a href ="/articles">All articles</a></li>
+		<li><a href ="/favorites">Favorite articles</a></li>
+		<li><a href = "/articles/new">Create new article</a></li>
+	</ul>
+
+	</head>
 
 <%= yield %>
 
