changed h1 to h2 and added in text

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
-<h1>Hello, Rails!</h1>
+<h2>Hello, Rails!</h2>
+
+<p>
+	Click the link below to access the test app!
+</p>
 
 <%= link_to 'My test app', controller: 'articles' %>
+
+</div>
