--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,13 +5,14 @@
   <tr>
    <th>Title</th>
    <th>Text</th>
-   <th coldspan= '3'</th>
+   <th coldspan= '2'</th>
   </tr>
 
   <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
+			<td><%= image_tag article.photo.url(:medium)%>
       <td><%= link_to 'Show', article_path(article) %></td>
       <td><%= link_to 'Edit', edit_article_path(article)%></td>
       <td><%= link_to 'Destroy', article_path(article),
@@ -19,7 +20,7 @@
     </tr>
   <% end %>
 </table>
-</p>
 
-<!--<%= link_to 'Favorite articles', favorites_path %>-->
-<!--<%= link_to 'New article', new_article_path %>-->
+
+
+
