Created new art_img class

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -25,3 +25,20 @@ h1 {
 	padding: 5px;
 }
 
+.art_img {
+
+	float:left;
+	padding:5px;
+
+}
+
+.article_title {
+
+	float:left;
+	width: 220px;
+	padding: 10px;
+	border: 1px solid black;
+	margin: 0px;
+
+}
+
