--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,20 @@
 <h1>All articles</h1>
 <hr>
 <p>
-<table>
-  <tr>
-   <th>Title</th>
-   <th>Text</th>
-   <th coldspan= '2'</th>
-  </tr>
 
-  <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-			<td><%= image_tag article.photo.url(:medium)%>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article)%></td>
-      <td><%= link_to 'Destroy', article_path(article),
-                    method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+ <% @articles.each do |article| %>
+		
+		<div=>
+			<%= image_tag article.photo.url(:medium)%>
+			<%= article.title %>
+      <%= article.text %>
+      <%= link_to 'Show', article_path(article) %>
+      <%= link_to 'Edit', edit_article_path(article)%>
+      <%= link_to 'Destroy', article_path(article),
+                    method: :delete, data: { confirm: 'Are you sure?' } %>
+    
   <% end %>
-</table>
+
 
 
 
