--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,32 @@
 		<li><a href ="/articles">All articles</a></li>
 		<li><a href ="/favorites">Favorite articles</a></li>
 		<li><a href = "/articles/new">Create new article</a></li>
+		
+		<li><% if user_signed_in? %> </li>
+	  <div class='user_logg'>Logged in as <strong><%= current_user.email %></strong></div> 
+		<li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navigbar-link' %></li>
+		<li><%= link_to 'Logout', destroy_user_session_path, method: :delete, :class =>'navigbar-link' %></li>
+			<% else %>
+		<li> <%= link_to 'Sign up', new_user_registration_path, :class => 'navigbar_link' %></li>
+		<li> <%= link_to 'Login', new_user_session_path, :class => 'navigbar_link' %> </li>
+			
+			<% end %>
 	</ul>
 
 	</head>
 
+	<% if notice %>
+	  <p class="alert alert-success"><%= notice %></p>
+	<% end %>
+	<% if alert %>
+	  <p class="alert alert-danger"><%= alert %></p>
+	<% end %>
+
+
+	
+			
+	
+			
 <%= yield %>
 
 </body>
