--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,16 +3,11 @@
 <p>
 
  <% @articles.each do |article| %>
-		
-		<div=>
-			<%= image_tag article.photo.url(:medium)%>
-			<%= article.title %>
-      <%= article.text %>
-      <%= link_to 'Show', article_path(article) %>
-      <%= link_to 'Edit', edit_article_path(article)%>
-      <%= link_to 'Destroy', article_path(article),
-                    method: :delete, data: { confirm: 'Are you sure?' } %>
-    
+		<div id="article_box">
+		<div id="art_img"><%= image_tag article.photo.url(:medium)%> </div>	
+			<div class="art_title"><%= article.title %></div>
+      <div class="art_text"><%= article.text %></div>
+    </div>
   <% end %>
 
 
