code for the comments section.

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <p>
 		<strong>Commenter: </strong>
-		<%= comment.commenter %>
+		<%= comment.user.email%>
 </p>
 	
 <p>
@@ -8,8 +8,9 @@
 		<%= comment.body %>
 </p>
 
-<p>
-	<%= link_to 'Destroy Comment', [comment.article, comment],
-							 method: :delete,
-							 data: { confirm: 'Are you sure?' } %>
+<p> 
+<%= link_to 'Destroy Comment', [comment.article, comment],
+						 method: :delete,
+						 data: { confirm: 'Are you sure?' } %>
+					
 </p>
