--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,8 @@
 	
 	width: 100%;
 	float: left;
-	margin: 0 1;
-	padding: 0;
+	margin: 10px 1px;
+	padding: 0px;
 	list-style: none;
 	background color: none;
 	border-bottom: 1px solid #ccc;
