--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -2,19 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
-h1 {
-
-	text-align: center;
-	&.left {
-	text-align: left;
-	}
-}
-
-
 #article-body {
 	
-	padding: 5px;
+	padding:5px;
 	margin:0 auto;
 
 }
@@ -22,14 +12,30 @@ h1 {
 #article_image {
 
 	float:right; 
-	padding: 5px;
+	padding:5px;
+
+}
+
+h1 {
+
+	text-align:center;
+	&.left {
+	text-align:left;
+	}
+}
+
+#wrapper {
+	margin:0 auto;
+	width:1000px;
 	
 }
 
 #article_box{
 
-	width:800px;
+	width:1000px;
 	height:400px;
+	border: 3px solid darkseagreen;
+	
 }
 
 
@@ -37,29 +43,30 @@ h1 {
 
 	
 	float:left;
-	padding: 5px;
+	padding:15px;
 	text-align:left;
-	width: auto;
-	height: auto;
-	 
+	width:auto;
+	height:auto;
 	}
 
 .art_title {
  
-	float: left;
-	padding: 5px;
-	text-align:right;
-	border: 2px solid blue;
+	float:left;
+	padding:15px;
+	text-align:left;
+	width:600px;
+	height:30px;
 
 }
 
 .art_text {
 
 	float:left;
-	padding:5px;
+	padding:15px;
 	text-align:left;
-	height: 100px;
-	width:400px;
+	height:100px;
+	width:600px;
+	
 }
 
 
