--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,22 @@
 <h1>All articles</h1>
 <hr>
+<div id="wrapper">
 <p>
 
  <% @articles.each do |article| %>
-		<div id="article_box">
-		<div id="art_img"><%= image_tag article.photo.url(:medium)%> </div>	
-			<div class="art_title"><%= article.title %></div>
-      <div class="art_text"><%= article.text %></div>
-    </div>
-  <% end %>
+
+		<p><div id="article_box">
+			<div id="art_img"><%= image_tag article.photo.url(:medium)%> </div>
+				<div class="art_title"><%= article.title %></div>
+      	<div class="art_text"><%= truncate(article.text, length: 900)%></div>
+				<div class="art_options"><%= link_to 'Show', article_path(article) %>
+    														 <%= link_to 'Edit', edit_article_path(article) %>
+    														 <!--<%= link_to 'Destroy', article_path(article),
+                    method: :delete, data: { confirm: 'Are you sure?' } %>-->
+									</div>
+								</div>
+							<% end %>
+						</div>
 
 
 
