--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,8 +11,8 @@
       	<div class="art_text"><%= truncate(article.text, length: 900)%></div>
 				<div class="art_options"><%= link_to 'Show', article_path(article) %>
     														 <%= link_to 'Edit', edit_article_path(article) %>
-    														 <!--<%= link_to 'Destroy', article_path(article),
-                    method: :delete, data: { confirm: 'Are you sure?' } %>-->
+    														 <%= link_to 'Destroy', article_path(article),
+                    method: :delete, data: { confirm: 'Are you sure?' } %>
 									</div>
 								</div>
 							<% end %>
