commmented out the favorite articles section form nav bar for now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	<ul id= "nav">
 		<li><a href ="/">Home</a></li>
 		<li><a href ="/articles">All articles</a></li>
-		<li><a href ="/favorites">Favorite articles</a></li>
+		<!--<li><a href ="/favorites">Favorite articles</a></li>-->
 		<li><a href = "/articles/new">Create new article</a></li>
 		
 		<li><% if user_signed_in? %> </li>
