--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -19,8 +19,12 @@
 h1 {
 
 	text-align:center;
+	font-size:40px;
 	&.left {
 	text-align:left;
+	}
+	&.welcome {
+		font-size:35px;
 	}
 }
 
@@ -33,7 +37,7 @@ h1 {
 #article_box{
 
 	width:1000px;
-	height:400px;
+	height:350px;
 	border: 3px solid darkseagreen;
 	
 }
