--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#wrap {
+	width: auto;
+	height: auto;
+	text-align: center;
+	
+}
+
+.welcome_txt {
+	font-weight:normal;
+	color:#000000;
+	letter-spacing:1pt;
+	word-spacing:5pt;
+	font-size:20px;
+	text-align:center;
+	font-family:trebuchet MS, sans-serif;
+	line-height:1;
+}
+
+.welcome_link {
+	font-size: 20px;	
+}
