changed the style of home page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,10 @@
-<h2>Hello, Rails!</h2>
-
+<h1 class='welcome'>Rails Blogging Application </h1>
+<hr></hr>
+<div id='wrap'>
 <p>
-	Click the link below to access the test app!
+<div class='welcome_txt'>	Click the link below to get started.</div>
 </p>
 
-<%= link_to 'My test app', controller: 'articles' %>
+<div class='welcome_link'><%= link_to 'All articles', controller: 'articles' %></div>
 
 </div>
